# mcp_country_server

./: .env  README.md  deepseek_agent_service.py  mcp_core.py  pyproject.toml  requirements.txt  run-agent.ps1  server.py
mcp-reactApplication/my-app/: package-lock.json  package.json  vite.config.ts
mcp-reactApplication/my-app/src/: App.tsx  api.ts  env.d.ts
mcp_country_server (project root)/: setup.cfg         # add explicit py_modules and pytest config
mcp_country_server (project root)/tests/: test_hello.py # basic hello-world pytest
tests/: test_country.py
tools/: __init__.py  country.py  weather.py
